--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-scripts": "2.0.5",
+    "react-redux": "^5.1.0",
     "redux": "^3.6.0"
   },
   "scripts": {
